add pages deployment on push to neofetch

--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -2,6 +2,9 @@ name: "Deploy new pages build"
 
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - neofetch
 
 permissions:
   contents: read
