--- a/.github/workflows/deploy-dev.yml
+++ b/.github/workflows/deploy-dev.yml
@@ -1,10 +1,13 @@
 name: "Deploy new pages build"
 
+env:
+  branch: neofetch
+
 on:
   workflow_dispatch:
   push:
     branches:
-      - neofetch
+      - $branch
 
 permissions:
   contents: read
@@ -23,6 +26,8 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+        with:
+          ref: $branch
       - uses: actions/setup-node@v3
         with:
           node-version: 16
